compute.tf
# Network
data "aws_availability_zones" "available" {}

resource "aws_vpc" "app_vpc" {
  cidr_block           = "10.123.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "rm2-tf-vpc"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app_vpc.id
  tags = {
    Name = "rm2-tf-igw"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.123.0.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "rm2-tf-public-rtb"
  }
}

resource "aws_route_table_association" "public_rt_asso" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}


# Security Group

resource "aws_security_group" "allow-http" {
  name        = "allow-http"
  description = "Allow incoming HTTP traffic"
  vpc_id      = aws_vpc.app_vpc.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "rm2-tf-SSHSecurityGroup",
    description = "Security Group To Allow SSH from my IP range(s)",

  }
}


# EC2

data "aws_ami" "ami_id" {
  most_recent = true
  # name_regex       = "al2023-ami-2023.*"
  owners = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-2023.*"]
  }
  filter {
    name   = "architecture"
    values = ["x86_64"]
  }
  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}


resource "aws_instance" "apache" {
  ami                         = data.aws_ami.ami_id.id #var.ami_id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  subnet_id                   = aws_subnet.public_subnet.id
  vpc_security_group_ids      = [aws_security_group.allow-http.id]
  associate_public_ip_address = true
  tags = {
    Name = var.ec2_name
  }
  #   user_data = <<-EOF
  #   #!/bin/bash
  #   echo "*** Installing apache2"
  #   sudo apt update -y
  #   sudo apt install apache2 -y
  #   echo "*** Completed Installing apache2"
  #   EOF
}
